//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id Int [pk, increment]
  user_name String [not null]
  email String [unique, not null]
  idade Int
  date_created DateTime [default: `now()`, not null]
  last_modified DateTime [not null]
}

Table artistas {
  id Int [pk, increment]
  f_name String [not null]
  l_name String [not null]
  date_created DateTime [default: `now()`, not null]
  last_modified DateTime [not null]
  albums albums [not null]
  Musica musicas [not null]
}

Table musicas {
  id Int [pk, increment]
  titulo String [not null]
  date_created DateTime [default: `now()`, not null]
  last_modified DateTime [not null]
  Artista artistas
  artistaId Int
  Album albums
  albumId Int
}

Table albums {
  id Int [pk, increment]
  nome_album String [not null]
  autor String
  date_created DateTime [default: `now()`, not null]
  last_modified DateTime [not null]
  artista artistas [not null]
  musicas musicas [not null]
}

Table AlbumToArtista {
  albumsId Int [ref: > albums.id]
  artistaId Int [ref: > artistas.id]
}

Ref: musicas.artistaId > artistas.id

Ref: musicas.albumId > albums.id